# openshift-artifact-scraper-py

./: .gitignore  LICENSE  README.md  cached_request.py  constants.py  maintest.py  pyproject.toml
mooscraper/: moocore.py  mooutils.py
mooscraper/openshift_v4/: rhcos.py
mooscraper/openshift_v4/clients/: main.py  url_gen.py
mooscraper/openshift_v4/rhcos/: artifact_data.py  main.py  types.py  url_gen.py
mooscraper/openshift_v4/rhcos/ui/: list.py
quayscraper/: quay.py
utils/: cache.py  cached_request.py  progess.py  versioncompare.py
utils/ui/: download.py  printing.py
