[tool.poetry]
name = "openshift-artifact-scraper-py"
version = "0.1.0"
description = "This is a simple tool that scrapes information related to Openshift Release Artifacts"
authors = ["Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "openshift_artifact_scraper_py"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
requests5 = "^1.0.0"
requests-cache = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
